--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <a href="#gallery">Gallery</a>
             <a href="#review">Review</a>
             <a href="#contact">Contact</a>
+            <a href="#contact">Menu</a>
+
         </nav>
 
         <div class="icons">
