menu and hold deleted

--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
             <a href="#services">Services</a>
             <a href="#gallery">Gallery</a>
             <a href="#review">Review</a>
-            <a href="#contact">Contact</a>
-            <a href="#contact">Menu</a>
-            <a href="#contact">hold</a>
-
-
+            <a href="#contact">Contact</a>>
         </nav>
 
         <div class="icons">
