--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#services">Services</a>
             <a href="#gallery">Gallery</a>
             <a href="#review">Review</a>
-            <a href="#contact">Contact</a>>
+            <a href="#contact">Contact</a>
         </nav>
 
         <div class="icons">
