--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <div class="inputBox">
                     <h3>how many</h3>
-                    <input type="number" placeholder="number of guests">
+                    <input type="number" min="0" placeholder="number of guests">
                 </div>
 
                 <div class="inputBox">
