--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="box-container">
             <div class="box">
                 <h3>about us</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet consecteturt.</p>
             </div>
 
             <div class="box">
