--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
 
     <!-- brand section  -->
-    <!-- <section class="brand-container">
+    <section class="brand-container">
         <div class="swiper-container brand-slider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="images/logo2.jpg" alt=""></div>
@@ -515,7 +515,7 @@
                 <div class="swiper-slide"><img src="images/trav.jpg" alt=""></div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
     <!-- footer section  -->
