corrected a typo error

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="box">
                 <img src="images/t1.jpeg" alt="">
                 <div class="content">
-                    <h3><i class="fas fa-map-marker-alt"></i> Nike Ark Gallery </h3>
+                    <h3><i class="fas fa-map-marker-alt"></i> Nike Art Gallery </h3>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                     <div class="stars">
                         <i class="fas fa-star"></i>
